--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -37,7 +37,7 @@ jobs:
     - name: Test
       env:
         TEST_STORAGE: mysql
-        MYSQL_HOST: mariadb
+        MYSQL_HOST: 127.0.0.1:32574
         MYSQL_DBNAME: shortener_db
         MYSQL_USER: root
         MYSQL_PASSWORD: '12345678'
