--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -60,10 +60,7 @@ jobs:
       uses: codecov/codecov-action@v1
 
     - name: Run Vet & Lint
-      run: |
-        go vet .
-        go get -u golang.org/x/lint/golint
-        golint -set_exit_status=1 ./...
+      run: go vet .
 
   build:
     name: Build
